--- a/compose.yaml
+++ b/compose.yaml
@@ -10,3 +10,9 @@ services:
     volumes:
       - ./locust:/mnt/locust
     command: -f /mnt/locust/locustfile --config /mnt/locust/locust.conf
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus:/etc/prometheus
