--- a/compose.yaml
+++ b/compose.yaml
@@ -16,3 +16,9 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus:/etc/prometheus
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./grafana:/etc/grafana
